<resources>
    <string name="app_name">Lesson2IntentApp</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
    <string name="pindah_activity_dengan_object">Pindah Activity Dengan Object</string>
    <string name="dial_number">DIAL Number</string>
    <string name="pindah_activity_untuk_result">Pindah Activity untuk Result</string>
    <string name="hasil_dari_activity">Hasil dari Activity</string>
    <string name="ini_hasil_pindah_activity">Ini Hasil Pindah Activity :)</string>
</resources>
